// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Select componentDidMount should cover when found match value in list 1`] = `
<div
  style={
    Object {
      "position": "relative",
    }
  }
>
  <div
    style={
      Object {
        "height": "100%",
        "width": "100%",
      }
    }
  >
    
    <div
      className="sc-gzVnrw iuvHKI"
      style={Object {}}
    >
      <input
        className="sc-htoDjs jHiGb"
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        readOnly={true}
        style={Object {}}
        type="text"
        value="test"
      />
      <div
        className="sc-dnqmqq gfvqbw"
      />
    </div>
    <div
      className="sc-iwsKbI gznBTO"
    >
      <div
        style={
          Object {
            "height": 0,
            "maxHeight": 200,
            "minHeight": 0,
            "overflow": "hidden",
            "position": "relative",
            "width": "100%",
          }
        }
      >
        <div
          style={
            Object {
              "WebkitOverflowScrolling": "touch",
              "bottom": undefined,
              "left": undefined,
              "marginBottom": 0,
              "marginRight": 0,
              "maxHeight": 200,
              "minHeight": 0,
              "overflow": "scroll",
              "position": "relative",
              "right": undefined,
              "top": undefined,
            }
          }
        />
        <div
          style={
            Object {
              "borderRadius": 3,
              "bottom": 2,
              "display": "none",
              "height": 6,
              "left": 2,
              "position": "absolute",
              "right": 2,
            }
          }
        >
          <div
            style={
              Object {
                "backgroundColor": "rgba(0,0,0,.2)",
                "borderRadius": "inherit",
                "cursor": "pointer",
                "display": "block",
                "height": "100%",
                "position": "relative",
              }
            }
          />
        </div>
        <div
          style={
            Object {
              "borderRadius": 3,
              "bottom": 2,
              "display": "none",
              "position": "absolute",
              "right": 2,
              "top": 2,
              "width": 6,
            }
          }
        >
          <div
            style={
              Object {
                "backgroundColor": "rgba(0,0,0,.2)",
                "borderRadius": "inherit",
                "cursor": "pointer",
                "display": "block",
                "position": "relative",
                "width": "100%",
              }
            }
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Select should render correctly 1`] = `
<div
  style={
    Object {
      "position": "relative",
    }
  }
>
  <div
    style={
      Object {
        "height": "100%",
        "width": "100%",
      }
    }
  >
    
    <div
      className="sc-gzVnrw iuvHKI"
      style={Object {}}
    >
      <input
        className="sc-htoDjs jHiGb"
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        readOnly={true}
        style={Object {}}
        type="text"
        value=""
      />
      <div
        className="sc-dnqmqq gfvqbw"
      />
    </div>
    <div
      className="sc-iwsKbI gznBTO"
    >
      <div
        style={
          Object {
            "height": 0,
            "maxHeight": 200,
            "minHeight": 0,
            "overflow": "hidden",
            "position": "relative",
            "width": "100%",
          }
        }
      >
        <div
          style={
            Object {
              "WebkitOverflowScrolling": "touch",
              "bottom": undefined,
              "left": undefined,
              "marginBottom": 0,
              "marginRight": 0,
              "maxHeight": 200,
              "minHeight": 0,
              "overflow": "scroll",
              "position": "relative",
              "right": undefined,
              "top": undefined,
            }
          }
        />
        <div
          style={
            Object {
              "borderRadius": 3,
              "bottom": 2,
              "display": "none",
              "height": 6,
              "left": 2,
              "position": "absolute",
              "right": 2,
            }
          }
        >
          <div
            style={
              Object {
                "backgroundColor": "rgba(0,0,0,.2)",
                "borderRadius": "inherit",
                "cursor": "pointer",
                "display": "block",
                "height": "100%",
                "position": "relative",
              }
            }
          />
        </div>
        <div
          style={
            Object {
              "borderRadius": 3,
              "bottom": 2,
              "display": "none",
              "position": "absolute",
              "right": 2,
              "top": 2,
              "width": 6,
            }
          }
        >
          <div
            style={
              Object {
                "backgroundColor": "rgba(0,0,0,.2)",
                "borderRadius": "inherit",
                "cursor": "pointer",
                "display": "block",
                "position": "relative",
                "width": "100%",
              }
            }
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;
